# korus

./: README.md
korus/: .cproject  .project  CMakeLists.txt  package.xml
korus_capabilities/: .cproject  .project  CMakeLists.txt  package.xml
korus_capabilities/interfaces/: KorusBringup.yaml
korus_capabilities/providers/: diagnostics.yaml  differential_mobile_base.yaml  korus_bringup.yaml  laser_sensor.yaml  rgbd_sensor.yaml  robot_state_publisher.yaml
korus_capabilities/providers/launch/: korus_bringup.launch  rgbd_sensor.launch
korus_meta/: .cproject  .project  CMakeLists.txt  package.xml
korus_meta/resources/launch/: korus_1.launch  korus_1_pot.launch  korus_v3_1.launch  korus_v3_1_pot.launch  korus_v3_2.launch  korus_v3_2_pot.launch  korus_v3_sim.launch  minimal.launch  minimal_1.launch  minimal_sim.launch  minimal_v3_1.launch  minimal_v3_sim.launch  pot.launch  rapp_platform.launch  test_korus_robot_core.launch
korus_meta/resources/launch/apps/: app_pick_and_place.launch
korus_meta/resources/launch/calibration/: calibration_arm.launch  calibration_head.launch  korus_v3_upper_body_calibration.launch
korus_meta/resources/launch/components/: amcl.launch  gmapping.launch  korus_v2_robot_core.launch  korus_v2_sensors.launch  korus_v3_robot_core.launch  korus_v3_robot_core_pot.launch  korus_v3_sensors.launch  localize_ekf.launch  move_base.launch  nav_mng.launch  rapi.launch  remote_ctrl.launch  robot_core.launch  robot_core_pot.launch  sensors.launch  stargz_map.launch  virt_sensor.launch
korus_meta/resources/launch/debugging/: joystick_teleop.launch  keyboard_teleop.launch  keyop.launch  qgoo.launch  view_local_navi.launch  view_mobile_manipulation.launch  view_model_all.launch  view_model_diff_drive.launch  view_model_kobuki.launch  view_model_korus_omni_drive.launch  view_model_korus_v3_all.launch  view_model_korus_v3_diff_drive.launch  view_model_korus_v3_kinematics_base.launch  view_model_korus_v3_omni_drive.launch  view_motion_retargeting.launch  view_navigation.launch  view_object_manipulation.launch  view_object_recognition.launch  view_pick_and_place.launch  view_robot.launch  (+1 more)
korus_meta/resources/meshes/: base.dae  finger01.dae  finger02.dae  head_pan.dae  lower_arm.dae  palm.dae  shoulder.dae  turret.dae  upper_arm.dae  xtionpro_w_mount.dae
korus_meta/resources/rosinstall/: korus_groovy.rosinstall  korus_groovy_catkin.rosinstall  korus_groovy_rosbuild.rosinstall  korus_hydro.rosinstall  korus_hydro_catkin.rosinstall  moveit_hydro.rosinstall  moveit_release.rosinstall  ork_hydro.rosinstall
korus_meta/resources/rviz/: korus_v3.vcg  pick_and_place.vcg  planning_scene_warehouse_viewer.vcg  view_local_navi.vcg  view_mobile_manipulation.rviz  view_model_korus_diff_drive.rviz  view_model_korus_v3_all.vcg  view_model_korus_v3_diff_drive.vcg  view_model_korus_v3_kinematics_base.vcg  view_model_korus_v3_omni_drive.rviz  view_model_korus_v3_omni_drive.vcg  view_motion_retargeting.rviz  view_navigation.rviz  view_navigation.vcg  view_object_manipulation.rviz  view_object_recognition.rviz  view_robot.rviz  view_robot.vcg  view_robot_interactive_control.vcg
korus_meta/resources/stl/: 01.stl  02.stl  03.stl  04.stl  05.stl  06.stl  base_bak.stl  torso_turn.stl
korus_meta/resources/urdf/: diff_drive_base.urdf.xacro  hokuyo_lx30_laser.gazebo.xacro  hokuyo_lx30_laser.urdf.xacro  kinematics_base.urdf.xacro  korus.dae  korus.xacro  korus_3DOF_arm.urdf.xacro  korus_all.urdf.xacro  korus_diff_drive.urdf  korus_diff_drive.urdf.xacro  korus_omni_drive.urdf.xacro  korus_rounded.dae  korus_v3.urdf  korus_v3_all.urdf.xacro  korus_v3_body.urdf.xacro  korus_v3_diff_drive.urdf  korus_v3_diff_drive.urdf.xacro  korus_v3_kinematics_base.urdf  korus_v3_kinematics_base.urdf.xacro  korus_v3_omni_drive.urdf.xacro  materials.urdf.xacro  omni_drive_base.urdf.xacro
korus_meta/scripts/: build_map  cancel_move_base_goal  navigation  save_map  start_robot
korus_meta/unison/: skku_korus_ycp.prf  yujin_korus_ycp.prf
korus_nav_mng/: .cproject  .project  CMakeLists.txt  package.xml
korus_nav_mng/include/: nav_mng_node.h
korus_nav_mng/resources/launch/: nav_mng.launch  nav_mng_test.launch
korus_nav_mng/src/: nav_mng_node.cpp  nav_mng_test.cpp
korus_object_recognition/: .cproject  .project  CMakeLists.txt  package.xml
korus_object_recognition/conf/tabletop/: detection.object.ros.ork  korus.detection.object.ros.ork
korus_object_recognition/config/tabletop/: korus.detection.object.ros.ork
korus_object_recognition/launch/: korus_tabletop.launch  tabletop.launch
korus_object_recognition/scripts/: get_object_info_client.py
korus_rapi/src/lib/: CMakeLists.txt  arm_interface.cpp  gripper_interface.cpp  head_interface.cpp  korus_rapi.cpp
korus_rapi/src/node/: CMakeLists.txt  node.cpp
korus_scripts/: .cproject  .project  CMakeLists.txt  package.xml
korus_scripts/scripts/: build_map  disable  enable  navigation  startup_script.sh
korus_smach/: .cproject  CMakeLists.txt  package.xml  setup.py
korus_smach/launch/: find_object.launch  move_arm_ik.launch  move_arm_planner.launch  move_arm_planner_ik.launch  move_things_around.launch  pick_object.launch  pick_object_manual.launch  place_object.launch
korus_smach/scripts/calibration/: arm_calibration.py  head_calibration.py  upper_body_calibration.py
korus_smach/scripts/manipulation/: move_arm_ik_as.py  move_arm_ik_client.py  move_arm_planner_as.py  move_arm_planner_client.py  move_arm_planner_ik_as.py  move_gripper_as.py  move_gripper_client.py  pick_and_place.py  pick_and_place_test.py  pick_object_as.py  pick_object_client.py  pick_object_manual_as.py  place_object_as.py  place_object_client.py
korus_smach/scripts/mobile_manipulation/: move_things_around.py
korus_smach/scripts/object_recognition/: find_object_as.py  find_object_client.py
korus_smach/scripts/test/: add_collision_object.py
korus_stage/: .cproject  .project  CMakeLists.txt  package.xml
korus_stage/launch/: navigation.launch
korus_stage/worlds/: 6th_floor_fixed.world  6th_floor_plan.world  korus.inc  maze-noisy.world  robopark_plan.world
(+303 files in other folders)
