<?xml version="1.0"?>
<package>
  <name>korus</name>
  <version>0.0.1</version>
  <description>Catkin metapackage for the Korus software stack</description>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>Yujin</license>
  <url type="website">http://bitbucket.org/yujinrobot/korus</url>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>korus_meta</run_depend>
  <run_depend>korus_moveit_config</run_depend>
  <run_depend>korus_object_recognition</run_depend>
  <run_depend>korus_rapi</run_depend>
  <run_depend>korus_smach</run_depend>
  <run_depend>korus_stage</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
