<?xml version="1.0"?>
<package>
  <name>korus_meta</name>
  <version>0.1.0</version>
  <description>Meta-package for the Korus software stack</description>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>Yujin</license>
  <url type="website">http://bitbucket.org/yujinrobot/korus</url>
  <author email="stonier@yujinrobot.com">Daniel Stonier</author>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>
  
  <buildtool_depend>catkin</buildtool_depend>
    
  <!-- Yujin -->
  <run_depend>ycs_mechanism_model</run_depend>
  <run_depend>goo</run_depend>
  <run_depend>cruizcore</run_depend>
  <run_depend>stargazer</run_depend>
  <run_depend>diff_drive_base</run_depend>
  <run_depend>diff_drive_gyro_base</run_depend>
  <run_depend>sensor_board</run_depend>
  <run_depend>ycs_joint_trajectory_controller</run_depend>
<!--   <run_depend>ycs_localization_ekf</run_depend> -->
<!--   <run_depend>ycs_stargazer_map</run_depend> -->
<!--   <run_depend>yujin_maps</run_depend> -->
<!--   <run_depend>irobi_rf_remocon</run_depend> -->
  <run_depend>keyop_core</run_depend>
  <run_depend>qgoo</run_depend>
  <run_depend>ecl_core_apps</run_depend>

<!-- deprecated? -->
<!--   <depend package="hce_rapi"/>  -->
<!--   <depend package="navi_rapi"/>  -->
<!--   <depend package="korus_rapi"/>  -->
<!--   <depend package="remop_core"/>  -->
 
  <!-- ROS -->
  <run_depend>std_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>laser_drivers</run_depend>
  
  <!-- System dependencies -->
  <run_depend>unison</run_depend>
  <run_depend>unison-gui</run_depend>
  <run_depend>octomap</run_depend>
</package>
