<package>
  <name>korus_nav_mng</name>
  <version>0.1.0</version>
  <description>
    The Korus navigation manager combines inputs from the sensors integration board
    (safety sensors, joystick and switches) and the ros navigation stack, and bounds
    the output velocity commands sent to the motors according to acceleration limits.
    It also react to dangers reported by sonars, bumpers and PSD sensors.
  </description>
  <license>Yujin</license>
  <url type="website">https://bitbucket.org/yujinrobot/korus/korus_nav_mng</url>
  <author email="jorge@yujinrobot.com">Jorge Santos</author>
  <maintainer email="jorge@yujinrobot.com">Control Team</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sensor_board_msgs</build_depend>
  <build_depend>stargazer_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>sensor_board_msgs</run_depend>
  <run_depend>stargazer_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>

  </export>
</package>
